[tool.poetry]
name = "discord-app-example"
version = "0.1.0"
description = ""
authors = ["thijsfranck <thijsfranck@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord-py = { extras = ["voice"], version = "^2.4.0" }
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
mike = "^2.1.2"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.28"
pre-commit = "^3.7.1"
pymdown-extensions = "^10.8.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.14.0"
pytest-sugar = "^1.0.0"
ruff = "^0.5.1"

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
reportUnnecessaryTypeIgnoreComment = "error"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:'audioop' is deprecated and slated for removal in Python 3.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = [
    # Self and cls do not require annotations.
    "ANN101",
    "ANN102",
    # Module level docstrings don't always make sense
    "D104",
    # Pyright error codes are obnoxiously long. Ignore lint telling you to use them.
    "PGH003",
    # Documenting every file is a bit redundant for us.
    "D100",
    # No point in documenting magic methods.
    "D105",
    # Makes more sense to use `Parameters` in the main class instead of in the `__init__` .
    "D107",
    # We do not need cryptographically secure random functions.
    "S311",
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/test__*.py" = ["S101", "PLR2004"]
"examples/**/*.py" = ["INP001"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
